--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,17 +19,18 @@ html,body{
     font-weight: bold;
 }
 #header{
-    display: flex;
-    justify-content: space-between;
     position: absolute;
+    display: flex;
     z-index: 99;
     left: 10vw;
     right: 10vw;
     top :10vh;
     max-height: 5vh;
+    justify-content: space-between;
 }
 
 .tabMenu{
+    opacity: 45%;
     display: flex;
     align-items: center;
     list-style: none;
@@ -37,7 +38,6 @@ html,body{
     top:25%;
     padding: 0;
     margin: 0;
-    opacity: 45%;
     font-size:large;
     line-height: 1.3em;
     z-index: 99;
@@ -72,14 +72,14 @@ html,body{
 }
 
 .tabContent{
-    display: flex;
-    flex-direction: column;
     position: absolute;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 80%;
     border: 1px solid var(--border-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-size: auto;
     border-radius: 0 0 5px 5px;
 }
@@ -88,27 +88,29 @@ html,body{
     position: fixed;
     left: 0;
     bottom: 0;
-    background: center no-repeat url("sunnyLandscape.jpg");
+    background-color: #555;
+    /* background: center no-repeat url("sunnyLandscape.jpg"); */
     background-size: auto;
     transition: .1s;
 }
 
 #tabHistory{
-    position: fixed;
     bottom: 0;
     background-color: rgb(21, 193, 216);
-    background: center no-repeat url("epicLandscape.jpg");
+    /* background: center no-repeat url("epicLandscape.jpg"); */
     background-size: auto;
-    transition: .1s;
+    position: fixed;
     transform: translateX(100%);
+    transition: .1s;
 }
 
 #tabAlerts{
-    position: fixed;
-    bottom: 0;
-    background: center no-repeat url("insaneAlert.jpg");
-    transition: .1s;
     transform: translateX(100%);
+    bottom: 0;
+    background-color: rgb(156, 151, 151);
+    /* background: center no-repeat url("insaneAlert.jpg"); */
+    position: fixed;
+    transition: .1s;
 }
 
 .tabs{
