--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,33 +38,63 @@ html,body{
 #header{
     position: absolute;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
     top: 0;
     z-index: 99;
     height:var(--headerHeight);
     background-color: var(--headerColor);
     width: 100%;
 }
+#userName{
+    position: absolute;
+    left: 8%;
+    top: 8%;
+}
 
+#connectionState{
+    position: absolute;
+    right: 8%;
+    top: 8%;
+    cursor: pointer;
+}
+
+#fakeOverlay{
+    position: fixed;
+	z-index: 9;
+	display: none;
+    justify-content: center;
+    align-items: center;
+	left: 0%;
+	top: 0%;
+	width: 100%;
+	height: 100%;
+	backdrop-filter: blur(.15rem);
+	background-color: rgba(0,0,0,.55);
+}
 #fakeConnection{
     box-shadow: 0 0 500px 200px rgba(0, 0, 0, 1);
-    position: absolute;
-    display:flex;
+    position: relative;
+    display:none;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     width:50%;
     height: 30%;
     background-color: white;
     border-radius: 15px;
     z-index:99;
 }
+
 #fakeLabel{
-    /* position: absolute; */
-color: black;
-z-index:99;
-width: 30%;
-/* font-size: 1rem; */
-font-size: 10pt;
-height: 10%;
+    display: flex;
+    justify-content: center;
+    color: black;
+    z-index:99;
+    left: 15%;
+    width: 90%;
+    font-size: 1rem;
+    height: 10%;
+    
 }
 #fakeInput{
     
@@ -73,23 +103,27 @@ height: 10%;
     width: 30%;
     height: 10%;
 }
+#fakeButton{
+    width: 30%;
+    height: 30%;
+    cursor: pointer;
+}
 
 .linksMenu{
-    opacity: 45%;
+    position: absolute;
+    overflow:hidden;
     display: flex;
     align-items: center;
-    list-style: none;
-    position: absolute;
-    top:calc(var(--headerHeight) + 5%);
+    opacity: 45%;
+    bottom: 25%;
     padding: 0;
     margin: 0;
+    list-style: none;
     font-size:large;
     line-height: 1.3em;
-    z-index: 1;
     background-color: var(--tabMenuColor);
     border-radius:10px;
     transition: .6s;
-    overflow:hidden;
 }
 
 .linksMenu:hover{
