Make margin wider around RealTimeSensorView

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ html,body{
     gap: 3em;
     justify-content: space-around;
     align-items: center;
+    margin: 1em;
 }
 
 .realTimeSensorDataView{
