--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,20 +241,19 @@ html,body{
     aspect-ratio: 1/1;
     border-radius: 5%;
     padding: 1em;
-    box-shadow: 6px 8px 3px rgb(100,100,100);
+    border: 0.05em solid #adaaaa;
 }
 
 #alertsHistory{
-    overflow: scroll;
+    overflow-y: scroll;
     padding: 0.2em;
     display: flex;
     gap: 0.3em;
     width: fit-content;
     height: 18em;
-    background-color: white;
+    background-color: rgba(255,255,255, 0.4);
     flex-direction: column;
     border-radius: 2% / 4%;
-    box-shadow: 6px 8px 3px rgb(100,100,100);
 }
 
 .alertHistoryItem{
