--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,26 @@ html,body{
     box-shadow: 2px 3px 3px rgb(160,160,160);
 }
 
+.toastActive{
+    animation: toastNotification 4s;
+    position: fixed;
+    background-color: #fff;
+    text-align: center;
+    width: 15em;
+    padding: 3em;
+    right: -25%;
+    bottom: 5%;
+    border-radius: 30px;
+    z-index: 10;
+}
+
+@keyframes toastNotification {
+    0% { transform: translateX(0%);}
+    10% { transform: translateX(-120%);}
+    90% { transform: translateX(-120%);}
+    100% { transform: translateX(0%);}
+}
+
 @keyframes leftToRightIn{
     0%{
         transform: translateX(-100%);
