--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,9 @@
 
     --tabMenuColor       :rgb(209, 209, 209);
     --switcherColor      :rgb(255, 255, 255);
-    /* rgba(85, 85, 85,.8); */
+
     --tabHomeColor       :rgba(0, 0, 0,.65);
+ 
     --tabHistoryColor    :rgba(0, 0, 0,.65);
     --tabAlertsColor     :rgba(0, 0, 0,.65);
 
@@ -31,7 +32,6 @@ html,body{
     font: inherit;
     font-family: system-ui;
     vertical-align: baseline;
-    /* -webkit-overflow-scrolling: touch; */
     font-weight: bold;
 }
 
@@ -81,7 +81,7 @@ html,body{
     align-items: center;
     width:35%;
     height: 30%;
-    background-color: white;
+    background-color: var(--tabMenuColor);
     border-radius: 15px;
     z-index:99;
 }
@@ -103,18 +103,37 @@ html,body{
     z-index:99;
     width: 60%;
     height: 10%;
+    border-radius:5px ;
 }
 
 #fakeButton{
-    width: 30%;
-    height: 30%;
+    position: relative;
+    width: 7em;
+    height: 3em;
     border-radius:100px ;
     cursor: pointer;
-    transition: border-radius 100ms ease-out;
+    background-color: white;
+    border: 0;
+    box-shadow: 0 0px 6px rgb(99, 94, 94);
 }
 
-#fakeButton:hover{
-    border-radius: 50% ;
+#fakeButton::before{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    left: 0;
+    top:0;
+    border-radius:100px ;
+    background-color: var(--tabMenuColor);
+    box-shadow: 0 0px .5px rgb(99, 94, 94);
+    transform:scale(0);
+    transition: transform 80ms ease-in-out;
+}
+
+#fakeButton:hover::before{
+    transform:scale(.95)
 }
 
 .linksMenu{
@@ -162,20 +181,6 @@ html,body{
     text-decoration: none;
 }
 
-.tabContent{
-    /* position: absolute; */
-    width: 100%;
-    bottom: 0;
-    height: calc(100% - var(--headerHeight));
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-size: auto;
-    backdrop-filter: blur(.80rem);
-    /* border-radius: 0 0 5px 5px; */
-}
-
 .graphLimit{
     height:70%;
     width: 100%;
@@ -219,6 +224,17 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.tabContent{
+    width: 100%;
+    bottom: 0;
+    height: calc(100% - var(--headerHeight));
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: auto;
+    backdrop-filter: blur(.8rem);
 }
 
 #tabHome{
