--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,13 @@
     --textColor          :rgb(51, 51, 51);
 
     --headerHeight       :  20%;
-    --headerColor        : rgba(255, 255, 255,.0000001);;
+    --headerColor        : rgba(255, 255, 255,0);
 
     --tabMenuColor       :rgb(209, 209, 209);
     --switcherColor      :rgb(255, 255, 255);
+    --elementShadowColor :  0 0px 6px rgb(99, 94, 94);
 
     --tabHomeColor       :rgba(0, 0, 0,.65);
- 
     --tabHistoryColor    :rgba(0, 0, 0,.65);
     --tabAlertsColor     :rgba(0, 0, 0,.65);
 
@@ -40,7 +40,7 @@ html,body{
     display: flex;
     justify-content: center;
     top: 0;
-    z-index: 99;
+    z-index: 9;
     height:var(--headerHeight);
     background-color: var(--headerColor);
     width: 100%;
@@ -90,7 +90,6 @@ html,body{
     display: flex;
     justify-content: center;
     color: black;
-    z-index:99;
     left: 15%;
     width: 90%;
     font-size: 1rem;
@@ -100,7 +99,6 @@ html,body{
 #fakeInput{
     color: black;
     font-size: 1rem;
-    z-index:99;
     width: 60%;
     height: 10%;
     border-radius:5px ;
@@ -114,7 +112,7 @@ html,body{
     cursor: pointer;
     background-color: white;
     border: 0;
-    box-shadow: 0 0px 6px rgb(99, 94, 94);
+    box-shadow: var(--elementShadowColor);
 }
 
 #fakeButton::before{
@@ -122,12 +120,11 @@ html,body{
     content: '';
     width: 100%;
     height: 100%;
-    z-index: 2;
     left: 0;
     top:0;
     border-radius:100px ;
     background-color: var(--tabMenuColor);
-    box-shadow: 0 0px .5px rgb(99, 94, 94);
+    box-shadow: var(--elementShadowColor);
     transform:scale(0);
     transition: transform 80ms ease-in-out;
 }
@@ -166,11 +163,10 @@ html,body{
     color: var(--textColor);
     transition: all 0.3s ease-out;
     margin: 0.3rem;
-
     font-size: clamp(17px, 7vw, 18px);
     background-color: var(--switcherColor);
     border-radius: 0.7rem;
-    box-shadow: 0 0px 6px rgb(99, 94, 94);
+    box-shadow: var(--elementShadowColor);;
 }
 
 .linksMenu a {
@@ -214,18 +210,13 @@ html,body{
     bottom: 0;
 }
 
-.tabAnimated{
-    transition-property: transform;
-
-    transition-timing-function: linear;
-}
-
 [data-target="tabHome"],[data-target="tabHistory"]{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.tabContent{
+
+.everyTab{
     width: 100%;
     bottom: 0;
     height: calc(100% - var(--headerHeight));
@@ -235,6 +226,8 @@ html,body{
     align-items: center;
     background-size: auto;
     backdrop-filter: blur(.8rem);
+    transition-property: transform;
+    transition-timing-function: linear;
 }
 
 #tabHome{
@@ -250,6 +243,13 @@ html,body{
     justify-content: flex-start;
 }
 
+#tabAlerts{
+    position: fixed;
+    display: flex;
+    justify-content: start;
+    background-color: var(--tabAlertsColor);
+}
+
 .aggregatedSensorDataTable {
     width: 80%;
     color: white;
@@ -262,15 +262,6 @@ html,body{
 
 .aggregatedSensorDataTable thead {
     background-color: darkgray;
-}
-
-
-
-#tabAlerts{
-    position: fixed;
-    display: flex;
-    justify-content: start;
-    background-color: var(--tabAlertsColor);
 }
 
 #latestAlertsContainer{
@@ -333,7 +324,6 @@ html,body{
     90% { transform: translateX(-120%);}
     100% { transform: translateX(0%);}
 }
-
 
 .middle {
     transform: translateX(0);
