--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,17 +253,23 @@ html,body{
 }
 
 .aggregatedSensorDataTable {
+    background: rgba(0, 0, 0, 0.3);
     width: 80%;
-    color: white;
+    color: rgb(248, 247, 243);
     text-align: center;
     margin: 1em;
     border: 0.2rem solid darkgray;
     border-collapse: separate;
     border-spacing: 0.35em;
+    border-radius: 0.5em;
 }
 
 .aggregatedSensorDataTable thead {
-    background-color: darkgray;
+    background-color: #9e9e9e;
+}
+
+.aggregatedSensorDataTable thead tr td{
+    border-radius: 0.075em;
 }
 
 #latestAlertsContainer{
